force-app/main/default/objects/SQL_Qualification_Policy__mdt/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <description>The version stamped into SQL_Basis__c, so a historical qualification stays interpretable after the definition changes.</description>
    <inlineHelpText>Policy Version.</inlineHelpText>
    <label>Policy Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>