force-app/main/default/objects/SQL_Qualification_Policy__mdt/fields/Qualified_Stage__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Stage__c</fullName>
    <description>The exact Lead.Status value this policy governs. Held here so the Flow can ask whether the stage being entered is the governed one WITHOUT naming a stage in a Flow condition.</description>
    <inlineHelpText>Qualified Stage.</inlineHelpText>
    <label>Qualified Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>