force-app/main/default/objects/SQL_Qualification_Policy__mdt/fields/Require_Acceptance_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Require_Acceptance_Evidence__c</fullName>
    <description>Whether SQL requires the Lead to carry Sales acceptance evidence. An EVIDENCE-CHAIN check: the Sales Acceptance Policy is NOT re-evaluated and the MQL policy is not re-evaluated either. Prior governed stages are consumed through their evidence, never re-tested.</description>
    <inlineHelpText>Require Substantiated Sales Acceptance.</inlineHelpText>
    <label>Require Substantiated Sales Acceptance</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>