force-app/main/default/objects/SQL_Qualification_Policy__mdt/fields/Require_Confirmed_Need__c.field-meta.xml
<CustomField>
    <fullName>Require_Confirmed_Need__c</fullName>
    <description>Whether SQL requires a governed value in Qualified_Need__c. This is the requirement that makes SQL a distinct stage: it is the only evidence that could not have existed before Sales spoke to the prospect.</description>
    <inlineHelpText>Require Confirmed Business Need.</inlineHelpText>
    <label>Require Confirmed Business Need</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>