force-app/main/default/objects/SQL_Qualification_Policy__mdt/fields/Require_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Require_Next_Step__c</fullName>
    <description>Whether SQL requires Next_Step_Date__c to be present and not in the past at the moment of qualification. Evidences agreed forward motion. The free-text Next_Step__c is never consulted.</description>
    <inlineHelpText>Require Agreed Next Step.</inlineHelpText>
    <label>Require Agreed Next Step</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>